# srglib-rust

./: .gitignore  Cargo.toml  LICENSE
src/: descriptor.rs  lib.rs  prelude.rs  types.rs  utils.rs
src/format/: csrg.rs  mod.rs  srg.rs  tsrg.rs
src/mappings/: frozen.rs  mod.rs  simple.rs  transformer.rs
tests/: chain.rs  format.rs
