[package]
name = "srglib"
description = "Handles SRG mapping files"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
edition = "2018"
# Not ready yet
publish = false

[dependencies]
indexmap = "1.0.1"
memchr = "2.1.0"
lazy_static = "1.1.0"
difference = "2.0.0"
failure = "0.1.2"
failure_derive = "0.1.2"
itertools = "0.7.8"